--- a/src/main/resources/templates/gruppo/commissione_detail.html
+++ b/src/main/resources/templates/gruppo/commissione_detail.html
@@ -64,5 +64,6 @@
                 th:text="${responsabile.cognome}"></span></p>
     </div>
 </div>
+<script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
