--- a/src/main/resources/templates/repository/repository.html
+++ b/src/main/resources/templates/repository/repository.html
@@ -3,49 +3,75 @@
 <head>
 
     <head th:include="/fragments/fragments.html :: head">
-        <title id="pageTitle">Amigo|I miei gruppi</title>
+        <title id="pageTitle">Amigo| Repository</title>
     </head>
 </head>
 <body>
 <div th:insert="fragments/fragments.html :: header"></div>
+<h1 class="ui header" align="center">Repository d'Ateneo</h1>
+    <div class="ui main text container">
+        <div class="ui message success" th:if="${addFlag==true}">
+            <i class="close icon"></i>
+            <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
+        </div>
 
-    <h1 class="ui header" align="center">Carica documento</h1>
+        <div class="ui error message" th:if="${addFlag==false}">
+            <i class="close icon"></i>
+            <p>Documento non caricato!</span></p>
+        </div>
 
-    <form th:action="@{/repository/uploadDocumento}" method="post" enctype="multipart/form-data" >
-            <label for="file">Filename:</label>
-            <input type="file" name="file" id="file"/>
-            <input type="submit" name="submit" value="Submit" />
-    </form>
+        <div class="ui search">
+            <div class="ui icon input">
+                <form action="/repository">
+                    <input class="prompt" type="text" placeholder="Inserisci nome..." name="name">
+                    <button type="submit" name="submit" class="ui basic button">
+                        <i class="search icon"></i>
+                    </button>
+                </form>
 
-    <div class="ui message success" th:if="${flagAggiunta==1}">
-        <i class="close icon"></i>
-        <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
+            </div>
+        </div>
+
+
+        <table class="ui celled table striped">
+            <tbody>
+                <tr class="center aligned">
+                    <td th:if="${#lists.isEmpty(documenti)}">
+                        <span>Non sono presenti documenti in repository.</span>
+                    </td>
+                </tr>
+                <tr class="center aligned" th:if="${#lists.isEmpty(documenti)==false}" >
+                    <th>Nome</th>
+                    <th>Data di caricamento</th>
+                </tr>
+                <th:block th:each="documento : ${documenti}">
+                    <tr class="center aligned">
+                        <td>
+                            <a target=”_blank” th:href="@{'/repository/{idDocumento}' ( idDocumento=${documento.id})}">
+                                <span th:text="${documento.nome}"></span>
+                            </a>
+                        </td>
+                        <td>
+                            <span th:text="${documento.dataInvio}"></span>
+                        </td>
+                    </tr>
+                </th:block>
+            </tbody>
+        </table>
+
+        <a th:if="${flagPQA==1}" class="ui primary button"
+           href="/repository/uploadDocumento">
+            Aggiungi
+        </a>
     </div>
 
-<table class="ui celled table striped">
-    <thead>
-    <tr class="center aligned">
-        <th>Nome documento</th>
-    </tr>
-    </thead>
-    <tbody>
-        <h1 class="ui header" align="center">Documenti</h1>
-        <tr class="center aligned">
-            <td th:if="${#lists.isEmpty(documenti)}">
-                <span>Non sono presenti documenti in repository.</span>
-            </td>
-        </tr>
-        <th:block th:each="documento : ${documenti}">
-            <tr class="center aligned">
-                <td>
-                    <a target=”_blank” th:href="@{'/repository/{idDocumento}' ( idDocumento=${documento.id})}">
-                        <span th:text="${documento.nome}"></span>
-                    </a>
-                </td>
-            </tr>
-        </th:block>
-    </tbody>
-</table>
-
+<script>$('.message .close')
+    .on('click', function () {
+        $(this)
+            .closest('.message')
+            .transition('fade')
+        ;
+    })
+;</script>
 </body>
 </html>
