--- a/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
@@ -9,7 +9,7 @@
 <h1 align="center" class="ui header">Aggiungi membro alla commissione: <span th:text="${supergruppo.name}"></span></h1>
 
 <div class="ui main text container">
-    <table class="ui celled table striped">
+    <table th:if="${persone.size()>0}" class="ui celled table striped">
         <thead>
         <tr class="center aligned">
             <th>Cognome</th>
@@ -35,21 +35,18 @@
         </th:block>
         </tbody>
     </table>
+
     <div class="ui message success" th:if="${flagAggiunta==1}">
         <i class="close icon"></i>
         <p>Hai aggiunto corettamente <span th:text="${personaAggiunta.nome}"></span> <span
                 th:text="${personaAggiunta.cognome}"></span></p>
     </div>
-    <script>$('.message .close')
-        .on('click', function () {
-            $(this)
-                .closest('.message')
-                .transition('fade')
-            ;
-        })
-    ;</script>
 
+    <div class="ui message success" th:if="${persone.size()}==0">
+        <i class="close icon"></i>
+        <p>Non ci sono altri membri da aggiungere!</p>
+    </div>
 </div>
-
+<script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
