--- a/src/main/resources/templates/gruppo/crea_commissione.html
+++ b/src/main/resources/templates/gruppo/crea_commissione.html
@@ -11,8 +11,33 @@
     <div class="ui form">
         <form action="#" method="post"
               th:action="@{'/gruppi/{idGruppo}/commissioni/create'( idGruppo=${idGruppo})}" th:object="${command}">
-            <p>Nome commissione: <input th:field="*{name}" type="text"/></p>
-            <p>Descrizione: <textarea th:field="*{descrizione}"></textarea></p>
+            <p>Nome commissione: <input th:field="*{name}" type="text" required/></p>
+            <p>Descrizione: <textarea th:field="*{descrizione}" required></textarea></p>
+
+            <h3>Seleziona Responsabile commissione</h3>
+            <table class="ui celled table">
+                <thead>
+                <tr class="center aligned">
+                    <th>Scelta</th>
+                    <th>Nome</th>
+                    <th>Cognome</th>
+                    <th>Email</th>
+                </tr>
+                </thead>
+                <tbody>
+                <th:block th:each="persona : ${persone}">
+                    <tr class="center aligned">
+                        <td>
+                            <input type="radio" required th:name="idPersona" path="idPersona" th:value="${persona.id}">
+                        </td>
+                        <td th:text="${persona.nome}"></td>
+                        <td th:text="${persona.cognome}"></td>
+                        <td th:text="${persona.user.getEmail()}"></td>
+                    </tr>
+                </th:block>
+                </tbody>
+            </table>
+
             <input class="ui button" name="Invia" type="submit">
         </form>
     </div>
