--- a/src/main/resources/templates/task/crea_task.html
+++ b/src/main/resources/templates/task/crea_task.html
@@ -8,12 +8,15 @@
 </head>
 <body>
 <div th:insert="fragments/fragments.html :: header"></div>
+<div class="ui message negative text container" th:if="${flagCreazione==false}">
+    <i class="close icon"></i>
+    <p>Non hai creato correttamente il Task </p>
+</div>
 <h1 class="ui header" align="center">I task del gruppo : </h1>
-
 <form
         class="ui form text container"
         method="post"
-        th:action="@{'/gruppo/visualizzaListaTaskSupergruppo/{idSupergruppo}/creazioneTaskSupergruppo'( idSupergruppo=${idSupergruppo})}"
+        th:action="@{'/gruppi/{idSupergruppo}/tasks/create'( idSupergruppo=${idSupergruppo})}"
         th:object="${taskForm}"
 >
 
@@ -46,7 +49,8 @@
         <th:block th:each="persona : ${persone}">
            <tr class="center aligned">
                <td>
-                   <input type="radio" th:name="idPersona" path="idPersona" th:value="${persona.id}">
+                   <input type="radio" class="ui radio checkbox" th:name="idPersona" path="idPersona"
+                          th:value="${persona.id}">
                </td>
                 <td th:text="${persona.nome}"></td>
                 <td th:text="${persona.cognome}"></td>
@@ -59,14 +63,6 @@
 </form>
 
 </table>
-<div class="ui message success text container" th:if="${flagCreazione==true}">
-    <i class="close icon"></i>
-    <p>Hai creato correttamente il Task </p>
-</div>
-<div class="ui message negative text container" th:if="${flagCreazione==false}">
-    <i class="close icon"></i>
-    <p>Non hai creato correttamente il Task </p>
-</div>
 <script>$('.message .close')
     .on('click', function() {
         $(this)
