--- a/src/main/resources/templates/task/tasks_supergruppo.html
+++ b/src/main/resources/templates/task/tasks_supergruppo.html
@@ -49,6 +49,7 @@
                 <th>Task relativo</th>
                 <th>Download documento</th>
                 <th>Dettagli Task</th>
+                <th>Inoltra a PQA</th>
             </tr>
             </thead>
             <tbody>
@@ -65,6 +66,10 @@
                         <a class="ui primary button"
                            th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}'( idSupergruppo=${idSupergruppo} , idTask=${documento.getTask().getId()} ) }">Dettagli</a>
                     </td>
+                    <td th:if="${documento.consegna==null}">
+                        <a class="ui secondary button"
+                           th:href="@{'/gruppi/{idSupergruppo}/tasks/{idTask}/inoltro'( idSupergruppo=${idSupergruppo} , idTask=${documento.getTask().getId()} ) }">Inoltra</a>
+                    </td>
                 </tr>
             </th:block>
             </tbody>
@@ -73,6 +78,10 @@
 
 
     </div>
-
+    <div class="ui message green text container" th:if="${flagInoltro==1}">
+        <i class="close icon"></i>
+        <p>Hai creato correttamente il Task </p>
+    </div>
+    <script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
