Fix bug from taskControllerTest

--- a/src/main/resources/templates/task/tasks_supergruppo.html
+++ b/src/main/resources/templates/task/tasks_supergruppo.html
@@ -78,7 +78,7 @@
 
 
 </div>
-<div class="ui message green text container" th:if="${flagInoltro==true}">
+<div class="ui message green text container" th:if="${flagInoltro==1}">
     <i class="close icon"></i>
     <p>Hai creato correttamente il Task </p>
 </div>
