restyle of the page repository.html

--- a/src/main/resources/templates/repository/repository.html
+++ b/src/main/resources/templates/repository/repository.html
@@ -10,28 +10,15 @@
 <div th:insert="fragments/fragments.html :: header"></div>
 <h1 class="ui header" align="center">Repository d'Ateneo</h1>
     <div class="ui main text container">
-        <div class="ui message success" th:if="${addFlag==true}">
-            <i class="close icon"></i>
-            <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
+
+        <form action="/repository">
+        <div class="ui action input" style="float: right; margin-bottom:5px;">
+            <input type="text" placeholder="Search..." name="name">
+                <button class="ui teal icon button">
+                    <i class="search icon"></i>
+                </button>
         </div>
-
-        <div class="ui error message" th:if="${addFlag==false}">
-            <i class="close icon"></i>
-            <p>Documento non caricato!</span></p>
-        </div>
-
-        <div class="ui search">
-            <div class="ui icon input">
-                <form action="/repository">
-                    <input class="prompt" type="text" placeholder="Inserisci nome..." name="name">
-                    <button type="submit" name="submit" class="ui basic button">
-                        <i class="search icon"></i>
-                    </button>
-                </form>
-
-            </div>
-        </div>
-
+        </form>
 
         <table class="ui celled table striped">
             <tbody>
@@ -40,38 +27,38 @@
                         <span>Non sono presenti documenti in repository.</span>
                     </td>
                 </tr>
-                <tr class="center aligned" th:if="${#lists.isEmpty(documenti)==false}" >
-                    <th>Nome</th>
-                    <th>Data di caricamento</th>
-                </tr>
-                <th:block th:each="documento : ${documenti}">
-                    <tr class="center aligned">
-                        <td>
-                            <a target=”_blank” th:href="@{'/repository/{idDocumento}' ( idDocumento=${documento.id})}">
-                                <span th:text="${documento.nome}"></span>
-                            </a>
-                        </td>
-                        <td>
-                            <span th:text="${documento.dataInvio}"></span>
-                        </td>
-                    </tr>
-                </th:block>
             </tbody>
         </table>
 
-        <a th:if="${flagPQA==1}" class="ui primary button"
+        <div class="ui relaxed divided list">
+            <div class="item" th:each="documento : ${documenti}">
+                <i class="large file alternate middle aligned icon"></i>
+                <div class="content">
+                    <a target=”_blank” th:href="@{'/repository/{idDocumento}' ( idDocumento=${documento.id})}">
+                        <span th:text="${documento.nome}"></span>
+                    </a>
+                    <div class="description"><span th:text="${documento.dataInvio}"></span></div>
+                </div>
+            </div>
+        </div>
+
+        <a th:if="${flagPQA==1}" class="ui teal right labeled icon button"
            href="/repository/uploadDocumento">
-            Aggiungi
+            Aggiungi <i class="plus icon"></i>
         </a>
+        <div class="ui message green" th:if="${addFlag==true}">
+            <i class="close icon"></i>
+            <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
+        </div>
+
+        <div class="ui error message" th:if="${addFlag==false}">
+            <i class="close icon"></i>
+            <p>Documento non caricato!</span></p>
+        </div>
     </div>
 
-<script>$('.message .close')
-    .on('click', function () {
-        $(this)
-            .closest('.message')
-            .transition('fade')
-        ;
-    })
-;</script>
+
+
+<script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
