--- a/src/main/resources/templates/repository/aggiunta_documento_repository.html
+++ b/src/main/resources/templates/repository/aggiunta_documento_repository.html
@@ -13,14 +13,16 @@
     <div class="ui main text container">
         <div class="ui middle aligned center aligned grid container">
             <form th:action="@{/repository/uploadDocumento}" method="post" enctype="multipart/form-data" >
-                <label for="file">Filename:</label>
-                <input type="file" name="file" id="file"/>
-                <button type="submit" name="submit" class="ui huge green right floated button">
-                    <i class="ui upload icon"></i>
-                    Carica
-                </button>
+
+            <label class="ui icon button" for="file-upload">
+                <i class="file icon"></i>
+                Carica file</label>
+                <input id="file-upload" name="file" required style="display:none" type="file">
+                <input class="ui positive button" name="submit" type="submit" value="Invia"/>
+
             </form>
         </div>
     </div>
+    <script type="text/javascript" th:src="@{/destinatari.js}"></script>
 </body>
 </html>
