--- a/src/main/resources/templates/gruppo/crea_commissione.html
+++ b/src/main/resources/templates/gruppo/crea_commissione.html
@@ -8,11 +8,16 @@
 
 <h1 align="center" class="ui header">Creazione Commissione</h1>
 <div class="ui main text container">
+    <div class="ui error message" th:if="${flagCreate==1}">
+        <i class="close icon"></i>
+        <p>Compilare correttamente tutti i campi!
+            NB: il nome e la descrizione devono iniziare con una maiuscola e non possono contenere caratteri speciali</p>
+    </div>
     <div class="ui form">
         <form action="#" method="post"
               th:action="@{'/gruppi/{idGruppo}/commissioni/create'( idGruppo=${idGruppo})}" th:object="${command}">
-            <p>Nome commissione: <input th:field="*{name}" type="text" required/></p>
-            <p>Descrizione: <textarea th:field="*{descrizione}" required></textarea></p>
+            <p>Nome commissione: <input th:field="*{name}" type="text"/></p>
+            <p>Descrizione: <textarea th:field="*{descrizione}"></textarea></p>
 
             <h3>Seleziona Responsabile commissione</h3>
             <table class="ui celled table">
@@ -28,7 +33,7 @@
                 <th:block th:each="persona : ${persone}">
                     <tr class="center aligned">
                         <td>
-                            <input type="radio" required th:name="idPersona" path="idPersona" th:value="${persona.id}">
+                            <input type="radio" th:name="idPersona" path="idPersona" th:value="${persona.id}">
                         </td>
                         <td th:text="${persona.nome}"></td>
                         <td th:text="${persona.cognome}"></td>
@@ -42,5 +47,6 @@
         </form>
     </div>
 </div>
+<script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
