--- a/src/main/resources/templates/task/miei_task.html
+++ b/src/main/resources/templates/task/miei_task.html
@@ -11,7 +11,7 @@
 <h1 class="ui header" align="center">I miei task : </h1>
 
 <div class="ui main text container">
-    <table class="ui celled table striped">
+    <table class="ui fixed table">
         <thead>
         <tr class="center aligned">
             <th>Nome</th>
@@ -23,7 +23,7 @@
         <tbody>
         <th:block th:each="task : ${listaTask}">
             <tr class="center aligned">
-                <td th:text="${task.nome}"></td>
+                <td style="word-wrap: break-word;" th:text="${task.nome}"></td>
                 <td th:text="${task.dataScadenza}"></td>
                 <td th:text="${task.stato}"></td>
                 <td>
@@ -36,7 +36,6 @@
         </tbody>
     </table>
 </div>
-
 
 </body>
 </html>
