--- a/src/main/resources/templates/task/dettagli_task_supergruppo.html
+++ b/src/main/resources/templates/task/dettagli_task_supergruppo.html
@@ -10,87 +10,203 @@
 <div th:insert="fragments/fragments.html :: header"></div>
 
 <h1 class="ui header" align="center"> Dettagli task : </h1>
-<div class="ui main text container">
-    <table class="ui celled table striped">
-        <thead>
-        <tr class="center aligned">
-            <th>Nome task</th>
-            <th>Data scadenza</th>
-            <th>Stato</th>
-        </tr>
-        </thead>
-        <tbody>
-        <th:block>
-            <tr class="center aligned">
-                <td th:text="${task.nome}"></td>
-                <td th:text="${task.dataScadenza}"></td>
-                <td th:text="${task.stato}"></td>
-            </tr>
+<!--<div class="ui main text container">-->
+<!--    <table class="ui celled table striped">-->
+<!--        <thead>-->
+<!--        <tr class="center aligned">-->
+<!--            <th>Nome task</th>-->
+<!--            <th>Data scadenza</th>-->
+<!--            <th>Stato</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <th:block>-->
+<!--            <tr class="center aligned">-->
+<!--                <td th:text="${task.nome}"></td>-->
+<!--                <td th:text="${task.dataScadenza}"></td>-->
+<!--                <td th:text="${task.stato}"></td>-->
+<!--            </tr>-->
 
-            <tr class="center aligned">
-                <th colspan="4" th:text="'Assegnatario'+' '+'task'"></th>
-            </tr>
+<!--            <tr class="center aligned">-->
+<!--                <th colspan="4" th:text="'Assegnatario'+' '+'task'"></th>-->
+<!--            </tr>-->
 
-            <tr class="center aligned">
-                <td colspan="4" th:text="${task.persona.getNome()} +' '+ ${task.persona.getCognome()}"></td>
-            </tr>
-            <tr class="center aligned">
-                <th colspan="4" th:text="Descrizione"></th>
-            </tr>
-            <tr class="center aligned">
-                <td colspan="4" th:text="${task.descrizione}"></td>
-            </tr>
-            <tr class="center aligned">
-                <th colspan="4" th:text="'Assegnatario'+' '+'task'"></th>
-            </tr>
-            <tr class="center aligned" >
-                <td colspan="4" th:if="${task.getDocumento()}!=null">
-                    <a target="_blank" th:text="${task.documento.getNome()}"
-                       th:href="@{'/documento/{idDocumento}' ( idDocumento=${task.documento.getId()})}"></a>
-                </td>
-                <td colspan="4" th:if="${task.getDocumento()}==null">
-                    <span>Nessun documento presente</span>
+<!--            <tr class="center aligned">-->
+<!--                <td colspan="4" th:text="${task.persona.getNome()} +' '+ ${task.persona.getCognome()}"></td>-->
+<!--            </tr>-->
+<!--            <tr class="center aligned">-->
+<!--                <th colspan="4" th:text="Descrizione"></th>-->
+<!--            </tr>-->
+<!--            <tr class="center aligned">-->
+<!--                <td colspan="4" th:text="${task.descrizione}"></td>-->
+<!--            </tr>-->
+<!--            <tr class="center aligned">-->
+<!--                <th colspan="4" th:text="'Assegnatario'+' '+'task'"></th>-->
+<!--            </tr>-->
+<!--            <tr class="center aligned" >-->
+<!--                <td colspan="4" th:if="${task.getDocumento()}!=null">-->
+<!--                    <a target="_blank" th:text="${task.documento.getNome()}"-->
+<!--                       th:href="@{'/documento/{idDocumento}' ( idDocumento=${task.documento.getId()})}"></a>-->
+<!--                </td>-->
+<!--                <td colspan="4" th:if="${task.getDocumento()}==null">-->
+<!--                    <span>Nessun documento presente</span>-->
 
-                </td>
-            </tr>
-
-
+<!--                </td>-->
+<!--            </tr>-->
 
 
 
-            <tr th:if="${isResponsabile==true}" class="center aligned">
-                <td colspan="1">
-                    <a class="ui green button"
-                       th:if="${( ( task.stato.equals('approvato') )==false )}"
-                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/approva' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Accetta </a>
-                </td>
-                <td>
-                    <a class="ui primary button"
-                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/modifica' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Modifica</a>
-                </td>
-                <td colspan="1">
-                    <a class="ui red button"
-                       th:if="${( ( task.stato.equals('respinto') )==false )}"
-                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/rifiuta' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Respingi</a>
-                </td>
-            </tr>
-            <tr th:if="${(isResponsabile==false) and ( ( task.stato.equals('approvato') )==false ) and ( ( task.stato.equals('in valutazione') )==false )}"
-                class="center aligned">
-                <td colspan="3">
-                    <a class="ui primary button"
-                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/completa' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
-                    > Completa</a>
-                </td>
 
-            </tr>
 
-        </th:block>
-        </tbody>
-    </table>
-</div>
+<!--            <tr th:if="${isResponsabile==true}" class="center aligned">-->
+<!--                <td colspan="1">-->
+<!--                    <a class="ui green button"-->
+<!--                       th:if="${( ( task.stato.equals('approvato') )==false )}"-->
+<!--                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/approva' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"-->
+<!--                    > Accetta </a>-->
+<!--                </td>-->
+<!--                <td>-->
+<!--                    <a class="ui primary button"-->
+<!--                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/modifica' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"-->
+<!--                    > Modifica</a>-->
+<!--                </td>-->
+<!--                <td colspan="1">-->
+<!--                    <a class="ui red button"-->
+<!--                       th:if="${( ( task.stato.equals('respinto') )==false )}"-->
+<!--                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/rifiuta' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"-->
+<!--                    > Respingi</a>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--            <tr th:if="${(isResponsabile==false) and ( ( task.stato.equals('approvato') )==false ) and ( ( task.stato.equals('in valutazione') )==false )}"-->
+<!--                class="center aligned">-->
+<!--                <td colspan="3">-->
+<!--                    <a class="ui primary button"-->
+<!--                       th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/completa' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"-->
+<!--                    > Completa</a>-->
+<!--                </td>-->
+
+<!--            </tr>-->
+
+<!--        </th:block>-->
+<!--        </tbody>-->
+<!--    </table>-->
+
+
+
+
+
+    <div class="ui form text container">
+
+        <div class="ui celled list">
+
+            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+                <i class="file alternate icon"></i>
+                <div class="content">
+                    <div class="header">Nome task</div>
+                    <div th:text="${task.nome}"></div>
+                </div>
+            </div>
+
+            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+                <i class="calendar alternate outline icon"></i>
+                <div class="content">
+                    <div class="header">Data scadenza</div>
+                    <div th:text="${task.dataScadenza}"></div>
+                </div>
+            </div>
+
+            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+                <i class="address card icon"></i>
+                <div class="content">
+                    <div class="header">Assegnatario task</div>
+                    <div th:text="${task.persona.getNome()} +' '+ ${task.persona.getCognome()}"></div>
+                </div>
+            </div>
+
+            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+                <i class="clipboard list icon"></i>
+                <div class="content">
+                    <div class="header">Descrizione</div>
+                    <div th:text="${task.descrizione}" style="word-wrap: break-word;"></div>
+                </div>
+            </div>
+
+            <div class="item" style="padding-top: 3%;padding-bottom: 2.5%;">
+                <!--            <i class="clipboard list icon"></i>-->
+                <!--            <i class="list alternate icon"></i>-->
+                <i class="eye icon"></i>
+                <div class="content">
+                    <div class="header">Stato</div>
+                    <div th:text="${task.stato}"></div>
+                </div>
+            </div>
+
+            <div class="item"  style="padding-top: 3%;padding-bottom: 2.5%;">
+                <i class="file icon"></i>
+                <div class="content">
+                    <div class="header">Documento</div>
+                    <div th:if="${task.getDocumento()}!=null" style="padding-top: 3%;padding-bottom: 2.5%;">
+                        <a target="_blank" th:text="${task.documento.getNome()}"
+                           th:href="@{'/documento/{idDocumento}' ( idDocumento=${task.documento.getId()})}">
+                        </a>
+                    </div>
+                    <div th:if="${task.getDocumento()}==null" style="padding-top: 3%;padding-bottom: 2.5%;">
+                        <span>Nessun documento presente</span>
+                    </div>
+
+                    <div th:if="${isResponsabile==true}"
+                         class="center aligned">
+                        <table class="ui fixed table" style="border: 1px rgba(34, 36, 38, 0.15);padding-top: 3%;padding-bottom: 2.5%;">
+                            <tr class="center aligned">
+                        <td colspan="1">
+                            <a class="ui green button"
+                               th:if="${( ( task.stato.equals('approvato') )==false )}"
+                               th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/approva' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
+                            > Accetta </a>
+                        </td>
+                        <td>
+                            <a class="ui primary button"
+                               th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/modifica' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
+                            > Modifica</a>
+                        </td>
+                        <td colspan="1">
+                            <a class="ui red button"
+                               th:if="${( ( task.stato.equals('respinto') )==false )}"
+                               th:href="@{'/gruppi/{idSupergruppo}/tasks/task_detail/{idTask}/rifiuta' ( idSupergruppo=${idSupergruppo} , idTask=${task.id}) }"
+                            > Respingi</a>
+                        </td>
+                        </tr>
+                        </table>
+
+<!--                        <form th:action="@{'/taskPersonali/task_detail/{idTask}/uploadDocumento'(idTask=${task.id})}"-->
+<!--                              method="post" enctype="multipart/form-data">-->
+<!--                            <span>-->
+<!--                                <label class="ui icon button" for="file-upload">-->
+<!--                                    <i class="file icon"></i>-->
+<!--                                    Carica file-->
+<!--                                </label>-->
+<!--                                <input id="file-upload" name="file" required style="display:none" type="file">-->
+<!--                             </span>-->
+<!--                            <input class="ui primary button" name="submit" type="submit" value="Invia"/>-->
+<!--                        </form>-->
+
+                    </div>
+                </div>
+            </div>
+
+<!--            <div class="field item" th:if="${( ( task.stato.equals('approvato') )==false ) and ( ( task.stato.equals('in valutazione') )==false )}" style="padding-top: 3%;padding-bottom: 2.5%;">-->
+<!--                <a class="ui positive button center aligned"-->
+<!--                   th:href="@{'/taskPersonali/task_detail/{idTask}/completa' (idTask=${task.id}) }"-->
+<!--                > Completa</a>-->
+<!--            </div>-->
+        </div>
+
+
+
+
+
+
+    </div>
 <div class="ui message success text container" th:if="${flagAzione==1}">
     <i class="close icon"></i>
     <p>Hai Approvato il Task </p>
